[gd_scene load_steps=18 format=2]

[ext_resource path="res://sprites/tower/towerDefense_tile252.png" type="Texture" id=1]
[ext_resource path="res://scripts/HOMEMissel.gd" type="Script" id=2]
[ext_resource path="res://scenes/ParticlesSmoke.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Destructable.gd" type="Script" id=4]
[ext_resource path="res://sprites/explosion3.png" type="Texture" id=5]
[ext_resource path="res://sprites/explosion1.png" type="Texture" id=6]
[ext_resource path="res://sprites/explosion2.png" type="Texture" id=7]
[ext_resource path="res://sprites/explosion4.png" type="Texture" id=8]
[ext_resource path="res://sprites/explosion5.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.65461
height = 19.0814

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.0162602, 0.0325203, 0.585366, 1 )
colors = PoolColorArray( 0.662373, 0.918166, 0.958008, 1, 0.96875, 0.0491943, 0.0491943, 1, 0.970833, 0.655694, 0.112581, 1, 1, 0.960938, 0, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.986301, 0.106818 ), -1.70649, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="CapsuleShape2D" id=7]
radius = 8.04

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ null, ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 9 ), null ],
"loop": false,
"name": "explode",
"speed": 10.0
} ]

[node name="HOMEMissel" type="Area2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="ParticlesSmoke" parent="." instance=ExtResource( 3 )]
position = Vector2( -26.604, 0.353554 )
lifetime = 1.0

[node name="ParticlesFire" type="Particles2D" parent="."]
position = Vector2( -18.5405, 0.586101 )
rotation = -3.14159
amount = 100
lifetime = 0.6
process_material = SubResource( 6 )

[node name="AreaDamage" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0
script = ExtResource( 4 )
health = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDamage"]
rotation = 1.5708
shape = SubResource( 7 )

[node name="Explosion" type="AnimatedSprite" parent="."]
z_index = 10
frames = SubResource( 8 )
animation = "explode"
[connection signal="body_entered" from="." to="." method="_on_HOMEMissel_body_entered"]
[connection signal="destroid" from="AreaDamage" to="." method="_on_AreaDamage_destroid"]
